Added Home, Filters, and Details Page

--- a/src/codeokk/shared/component/header/header.component.html
+++ b/src/codeokk/shared/component/header/header.component.html
@@ -4,7 +4,7 @@
       <div class="header-container">
         <div class="top-bar">
           <div class="logo-container">
-            <div class="logo-text">Alpha Tiles</div>
+            <div class="logo-text" routerLink="/">Alpha Tiles</div>
           </div>
           <div class="search-bar-container">
             <div class="query">
@@ -56,7 +56,9 @@
       <div class="nav-container">
         <div class="navbar-menus">
           <div class="navbar-menu">
-            <div class="navbar-menu-title">All Tiles</div>
+            <div class="navbar-menu-title" routerLink="/filtered-posts">
+              All Tiles
+            </div>
             <div class="navbar-submenu obl-submenu-row">
               <div class="container">
                 <div class="obl-submenu-nav flex-class">
