--- a/src/codeokk/modules/product-details/product-details.component.html
+++ b/src/codeokk/modules/product-details/product-details.component.html
@@ -153,28 +153,39 @@
         </div>
       </div>
     </div>
-    <!-- 
+
     <div class="similar-products-container">
-      <div class="similar-products" *ngIf="similarProductsLoaded">
+      <div class="similar-products">
         <div class="similar-products-head">Similar Products</div>
-        <div
+        <div class="menu-slider">
+          <ngx-slick-carousel
+            class="carousel"
+            #slickModal="slick-carousel"
+            (init)="slickInit($event)"
+            [config]="slideConfig"
+          >
+            <div
+              ngxSlickItem
+              *ngFor="let slide of slides"
+              class="slide slick-slide"
+              style="width: 193px !important"
+            >
+              <div class="menu-item">
+                <a><img src="{{ slide.img }}" alt="Image" /></a>
+                <p>{{ slide.text }}</p>
+              </div>
+            </div>
+          </ngx-slick-carousel>
+        </div>
+        <!-- <div
           class="main-content"
-          (mousedown)="startDrag($event)"
-          (mouseup)="stopDrag()"
-          (mousemove)="onDrag($event)"
         >
-          <div class="arrow left-arrow" (click)="scrollToLeft()">
-            <span class="material-icons-outlined"> arrow_back</span>
-          </div>
           <div class="main-row" #scrollContainer>
             <app-post-cards [products]="similarProducts"></app-post-cards>
           </div>
-          <div class="arrow right-arrow" (click)="scrollToRight()">
-            <span class="material-icons-outlined"> arrow_forward </span>
-          </div>
-        </div>
+        </div> -->
       </div>
-    </div> -->
+    </div>
 
     <!-- <div class="product-more-info">
         <div class="product-info-sections">
