Added Users Functionalities

--- a/src/codeokk/modules/admin/component/admin-dashboard/admin-dashboard.component.html
+++ b/src/codeokk/modules/admin/component/admin-dashboard/admin-dashboard.component.html
@@ -467,7 +467,7 @@
       <div class="manage-orders" *ngIf="showOrders">
         <div class="heading">
           <h2>Manage Orders</h2>
-          <!-- <app-shared-orders [apiType]="'admin'"></app-shared-orders> -->
+          <app-shared-orders [apiType]="'admin'"></app-shared-orders>
         </div>
       </div>
     </div>
