--- a/src/codeokk/modules/product-details/product-details.component.html
+++ b/src/codeokk/modules/product-details/product-details.component.html
@@ -132,7 +132,10 @@
         </div>
 
         <div class="product-actions-btns">
-          <div class="action-btn cart-btn">
+          <div
+            class="action-btn cart-btn"
+            (click)="addToBag(productDetails?.productCode)"
+          >
             <span class="material-icons-outlined bag-icon"> shopping_bag </span>
             <span>Add To Cart</span>
           </div>
@@ -150,6 +153,102 @@
             class="desc-details"
             [innerHTML]="productDetails?.description"
           ></div>
+        </div>
+
+        <div class="ratings-section">
+          <div class="detailed-rating-container">
+            <div class="rating-header">
+              <div class="title">Reviews & Ratings</div>
+              <span class="material-icons-outlined top-rating-icon">
+                hotel_class
+              </span>
+            </div>
+            <div class="detailed-rating">
+              <div class="flex-column">
+                <div class="average-rating">
+                  <span>{{ parseAverageRating() }}</span>
+                  <span class="material-icons-outlined star-icon"> star </span>
+                </div>
+                <div class="count-desc">{{ totalRatings }} Verified Buyers</div>
+              </div>
+              <div class="index-separator"></div>
+              <div style="width: 40%">
+                <div
+                  class="rating-bar-container"
+                  *ngFor="let rating of ratingDistribution; let i = index"
+                >
+                  <div class="rating">
+                    <span class="rating-level">{{ 5 - i }}</span>
+                    <span class="material-icons-outlined star-icon">
+                      star
+                    </span>
+                  </div>
+                  <mat-progress-bar
+                    mode="determinate"
+                    [value]="rating.percentage"
+                  ></mat-progress-bar>
+                  <div class="index-count">{{ rating.count }}</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="details-review-headline">
+            Customer Reviews ({{ reviewsData.length }})
+          </div>
+          <div class="user-reviews-container">
+            <div *ngFor="let review of reviewsData; let i = index">
+              <div class="user-review-wrapper" *ngIf="i < 2 || showAllReviews">
+                <div class="user-review-show-rating user-review-main">
+                  <div class="star-wrapper">
+                    <div class="review-five-stars">{{ review.rating }}</div>
+                    <span class="material-icons-outlined star-icon">
+                      star
+                    </span>
+                  </div>
+                  <div class="text-wrapper">{{ review.review }}</div>
+                </div>
+                <div class="user-review-footer user-review-show-rating">
+                  <div class="user-review-left">
+                    <span>User</span>
+                    <span>{{ formatDate(review.createdOn) }}</span>
+                  </div>
+                  <div>
+                    <div class="user-review-votes">
+                      <div class="user-review-thumb">
+                        <div class="action">
+                          <span class="material-icons-outlined thumb-icon">
+                            thumb_up
+                          </span>
+                          <span>14</span>
+                        </div>
+                      </div>
+                      <div class="user-review-thumb">
+                        <div class="action">
+                          <span class="material-icons-outlined thumb-icon">
+                            thumb_down
+                          </span>
+                          <span>4</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="view-all-reviews"
+            *ngIf="reviewsData.length > 2 && !showAllReviews"
+          >
+            <a class="detailed-reviews-allReviews" (click)="toggleReviews()">
+              See All Reviews
+            </a>
+          </div>
+          <div class="view-all-reviews" *ngIf="showAllReviews">
+            <a class="detailed-reviews-allReviews" (click)="toggleReviews()">
+              Show Less Reviews
+            </a>
+          </div>
         </div>
       </div>
     </div>
