--- a/src/codeokk/shared/component/header/header.component.html
+++ b/src/codeokk/shared/component/header/header.component.html
@@ -121,7 +121,10 @@
                 <span class="catalogue-text option-title">Catalogues</span>
               </div>
               <div class="cart option">
-                <span class="material-icons-outlined icon">
+                <span
+                  class="material-icons-outlined icon"
+                  routerLink="/user/cart"
+                >
                   shopping_cart
                 </span>
               </div>
