--- a/src/codeokk/modules/product-details/product-details.component.css
+++ b/src/codeokk/modules/product-details/product-details.component.css
@@ -488,3 +488,262 @@
 ::ng-deep .slick-track {
   width: 2123px !important;
 }
+
+.ratings-section {
+  margin: 20px 0;
+  padding: 15px 0;
+  border-top: 1px solid #d4d5d9;
+}
+
+.rating-header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.rating-header .title {
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #282c3f;
+  font-size: 16px;
+}
+
+.rating-header .top-rating-icon {
+  margin-top: -2px;
+  color: #282c3f;
+  font-size: 25px;
+}
+
+.detailed-rating {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  margin-top: 22px;
+}
+
+.flex-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.average-rating {
+  height: 58px;
+  font-size: 48px;
+  color: #282c3f;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+}
+
+.average-rating .star-icon {
+  font-size: 24px;
+  color: var(--dynamic-app-color);
+}
+
+.count-desc {
+  margin-top: 12px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #282c3f;
+}
+
+.index-separator {
+  margin-left: 34px;
+  height: 96px;
+  border-left: 1.2px solid #eaeaec;
+}
+
+.rating-bar-container {
+  width: 100%;
+  margin-left: 46px;
+  height: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+}
+
+.rating-bar-container .rating {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 14px;
+  color: #a9abb3;
+  align-items: center;
+  gap: 2px;
+}
+
+.rating-level {
+  width: 7px;
+}
+
+.rating-bar-container .rating .star-icon {
+  transform: scale(0.8);
+  color: #a9abb3;
+}
+
+.mat-mdc-progress-bar {
+  border: none;
+  width: 120px;
+  height: 4px;
+  background: #f5f5f6 !important;
+}
+
+::ng-deep .mdc-linear-progress__bar-inner {
+  border-color: var(--dynamic-app-color) !important;
+}
+
+.index-count {
+  font-size: 12px;
+  color: #282c3f;
+  margin-left: 9px;
+}
+
+.rating-wrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 3px;
+}
+
+.rating-wrapper .star-rating-count {
+  color: #666;
+  margin-top: 3px;
+}
+
+.details-review-headline {
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  color: #282c3f;
+  line-height: 1.4;
+  font-size: 16px;
+  margin-top: 20px;
+  font-weight: 600;
+}
+
+.user-reviews-container {
+  margin-bottom: 15px;
+}
+
+.user-review-main {
+  position: relative;
+}
+
+.user-review-show-rating {
+  padding-left: 35px;
+}
+
+.user-review-wrapper {
+  border-bottom: 1px solid #eaeaec;
+  padding: 18px 0;
+  margin: 0;
+  position: relative;
+}
+
+.star-wrapper {
+  position: absolute;
+  top: 3px;
+  left: -28px;
+  color: #fff;
+  font-size: 10px;
+  font-weight: 600;
+  position: relative;
+  height: 15px;
+  width: 27.5px;
+  line-height: 14px;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  padding-left: 4px;
+  border-radius: 1px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: var(--dynamic-app-color);
+}
+
+.star-wrapper .star-icon {
+  font-size: 12px;
+  margin: 0px;
+  color: #fff;
+}
+
+.text-wrapper {
+  font-size: 16px;
+  color: #282c3f;
+  line-height: 20px;
+  margin-top: -15px;
+  margin-left: 15px;
+}
+
+.user-review-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  color: #565a63;
+  font-size: 14px;
+  margin-top: 14px;
+  padding-left: 50px;
+}
+
+.user-review-wrapper
+  .user-review-footer
+  .user-review-left
+  span:first-child:after {
+  content: "|";
+  width: 15px;
+  display: inline-block;
+  text-align: center;
+}
+
+.user-review-votes {
+  font-size: 12px;
+}
+
+.user-review-thumb {
+  display: inline-block;
+  margin-left: 30px;
+}
+
+.user-review-thumb .action {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.thumb-icon {
+  font-size: 19px;
+}
+
+.detailed-reviews-allReviews {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--dynamic-app-color);
+  cursor: pointer;
+}
