--- a/src/codeokk/shared/component/post-cards/post-cards.component.css
+++ b/src/codeokk/shared/component/post-cards/post-cards.component.css
@@ -63,6 +63,85 @@
   z-index: 5;
 }
 
+.mobile-wishlist {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 26px !important;
+  background: #333;
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 7px;
+  z-index: 50;
+}
+
+.wishlist-icon {
+  margin-top: 1px;
+  font-weight: 400;
+  font-size: 23px;
+}
+
+.product-wishlistFlex,
+.product-bagFlex {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  gap: 5px;
+}
+
+.product-bag {
+  letter-spacing: 0.3px !important;
+  color: var(--dynamic-app-color) !important;
+  padding: 12px 0 !important;
+}
+
+.product-wishlist {
+  border-radius: 2px;
+  border: 1px solid #d4d5d9;
+  color: #282c3f;
+  letter-spacing: 0.3px;
+}
+
+.product-wishlist:hover {
+  border: 1px solid #292929;
+}
+
+.favorite-added {
+  background-color: #414141;
+}
+
+.favorite-added-bg {
+  color: orangered;
+}
+
+.close-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 50;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  font-size: 17px;
+  border-radius: 50%;
+  background-color: #222;
+  color: #fff;
+}
+
 .product-info {
   text-align: center;
   margin-top: 1rem;
