--- a/src/codeokk/shared/component/post-cards/post-cards.component.html
+++ b/src/codeokk/shared/component/post-cards/post-cards.component.html
@@ -28,6 +28,46 @@
                     : "favorite_border"
                 }}
               </span>
+              <div class="product-options" *ngIf="isAdmin">
+                <span
+                  class="material-icons-outlined edit-product-icon"
+                  (click)="toggleAdminOptions($event, product.productCode)"
+                  >{{
+                    adminOptionsVisibleFor === product.productCode
+                      ? "close"
+                      : "more_vert"
+                  }}</span
+                >
+                <div
+                  class="option"
+                  *ngIf="adminOptionsVisibleFor === product.productCode"
+                >
+                  <div
+                    class="edit-text admin-option"
+                    (click)="editProduct($event, product)"
+                  >
+                    Edit
+                  </div>
+                  <div
+                    class="delete-text admin-option"
+                    (click)="deleteProduct($event, product.id)"
+                  >
+                    Delete
+                  </div>
+                  <!-- <span
+                    class="material-icons-outlined edit-icon"
+                    (click)="editProduct($event, product)"
+                  >
+                    edit
+                  </span> -->
+                  <!-- <span
+                    class="material-icons-outlined edit-icon delete-icon"
+                    (click)="deleteProduct($event, product.id)"
+                  >
+                    delete
+                  </span> -->
+                </div>
+              </div>
               <span
                 class="close-icon material-icons"
                 (click)="removeItemFromWishlist($event, product?.cartId)"
