Fixed edit product functionality

--- a/src/codeokk/modules/admin/component/admin-dashboard/admin-dashboard.component.html
+++ b/src/codeokk/modules/admin/component/admin-dashboard/admin-dashboard.component.html
@@ -457,7 +457,7 @@
               mat-raised-button
               color="primary"
               class="send-feedback"
-              (click)="updateProduct(product[0]?.id)"
+              (click)="updateProduct(product?.id)"
             >
               Update Product
             </button>
